--- a/package.json
+++ b/package.json
@@ -23,11 +23,20 @@
     "mini-css-extract-plugin": "^1.3.9",
     "portfinder-sync": "0.0.2",
     "raw-loader": "^4.0.2",
+    "remove": "^0.1.5",
     "style-loader": "^2.0.0",
     "three": "^0.126.0",
     "webpack": "^5.24.2",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.7.3"
+  },
+  "devDependencies": {
+    "babelify": "^10.0.0",
+    "browserify": "^17.0.0",
+    "gulp": "^4.0.2",
+    "gulp-uglify": "^3.0.2",
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0"
   }
 }
